retrieveUnpackaged/objects/Order__c.object
<CustomObject>
    <fields>
        <fullName>Added_Item__c</fullName>
        <label>Added Item</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_account_number__c</fullName>
        <label>Bank account number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Canteen_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Canteen Customer</label>
        <referenceTo>Canteen_Customer__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Canteen_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Canteen Manager</label>
        <referenceTo>Canteen_admin__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Card_number__c</fullName>
        <label>Card number</label>
        <length>20</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Customer_Total_amount__c</fullName>
        <label>Customer Total amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_of_booking__c</fullName>
        <label>Date of booking</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Order_Id__c</fullName>
        <displayFormat>Order-{0000}</displayFormat>
        <label>Order Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Ordered_Items__c</fullName>
        <label>Ordered Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Payment_Mode__c</fullName>
        <label>Payment Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>credit cards</fullName>
                </value>
                <value>
                    <fullName>debit cards</fullName>
                </value>
                <value>
                    <fullName>paytm</fullName>
                </value>
                <value>
                    <fullName>gpay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_Your_Food_type__c</fullName>
        <label>Select Your Food type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Starter</fullName>
                </value>
                <value>
                    <fullName>Veg</fullName>
                </value>
                <value>
                    <fullName>Non veg</fullName>
                </value>
                <value>
                    <fullName>Sweets</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Select_ur_Items__c</fullName>
        <label>Select ur Items</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Select_Your_Food_type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Chapatis</fullName>
                    <label>Chapatis Rs:5/</label>
                </value>
                <value>
                    <fullName>Rice</fullName>
                    <label>Rice RS:20/Plate</label>
                </value>
                <value>
                    <fullName>DAL</fullName>
                    <label>DAL RS:20/plate</label>
                </value>
                <value>
                    <fullName>Chicken</fullName>
                    <label>Chicken Rs:250/Plate</label>
                </value>
                <value>
                    <fullName>Egg curry</fullName>
                    <label>Egg curry Rs:150/Plate</label>
                </value>
                <value>
                    <fullName>Mutton</fullName>
                    <label>Mutton Rs:350/Plate</label>
                </value>
                <value>
                    <fullName>Gulabjamun</fullName>
                    <label>Gulabjamun Rs:50/Plate</label>
                </value>
                <value>
                    <fullName>Kaju roll</fullName>
                    <label>Kaju roll Rs:50/Plate</label>
                </value>
                <value>
                    <fullName>Jalebi</fullName>
                    <label>Jalebi Rs:50/Plate</label>
                </value>
                <value>
                    <fullName>Soup</fullName>
                    <label>Soup Rs:25/Plate</label>
                </value>
                <value>
                    <fullName>Papad</fullName>
                    <label>Papad Rs:25/Plate</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_food__c</fullName>
        <label>Status of food</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to deliver</fullName>
                </value>
                <value>
                    <fullName>delivered</fullName>
                </value>
                <value>
                    <fullName>not delivered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_foods__c</fullName>
        <label>Status of foods</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Not Delivered</fullName>
                </value>
                <value>
                    <fullName>In Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Plates__c</fullName>
        <label>Total Plates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_amount_to_be_paid__c</fullName>
        <formula>Ordered_Items__c  *  Total_Plates__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total amount to be paid</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cancelled_Item__c</fullName>
        <label>cancelled Item</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Select ur order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <recordTypes>
        <fullName>NonVegSection</fullName>
        <active>true</active>
        <label>NonVegSection</label>
    </recordTypes>
    <recordTypes>
        <fullName>Order_record_type</fullName>
        <active>false</active>
        <label>Order record type</label>
    </recordTypes>
    <recordTypes>
        <fullName>veg_section</fullName>
        <active>true</active>
        <label>veg section</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>